Wed Oct 24 11:31:13 BST 2001  Olly Betts <olly@survex.com>

	* Added in "unique" flag (* prefix)

Tue Oct 23 14:57:02 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Project name change Xapian.

Fri Apr 27 15:15:32 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Project name change to Omseek.

Wed Apr 11 10:56:33 BST 2001 Olly Betts

	* Settled on "/home/omega" as location of databases (for now, later
	  this should be configurable).

	* Format names can now contain anything except "..".

Sat Mar 31 15:06:23 BST 2001 Olly Betts

	* Tidied up issues in omega with ammended $map and new $include.
	  Not tested, so there may still be issues...

Thu Mar 29 17:54:11 BST 2001  Richard Boulton <richard.boulton@omsee.com>

	* Fix parsequerytest to work with changed format for
	  OmQuery::get_description().

	* Add "using std::string" to parsequery.h, so queryparser compiles
	  on its own.

Mon Mar 19 17:46:36 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Fix omindex-config.cc to compile with STL port.  Now only complains
	  about issues to do with libxml.

Mon Mar 19 17:44:36 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Disable compilation of omindex-config, since it currently depends
	  on libxml2 which we have no configure checks for.  It should
	  probably only depend on libxml (1 or 2), anyway.

Mon Mar 19 16:03:21 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Use updated omsee.m4 macro.

Mon Mar 19 13:14:28 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Updated licenses, to include year 2001.

Sun Mar 18 12:59:36 GMT 2001  Richard Boulton <richard.boulton@omsee.com>

	* Some modifications to fix omega compilation to work with latest
	  version of the omsee API.

	* Some modifications towards getting omindex-config to compile with
	  libxml1: doesn't yet work.

Sat Mar 17 12:09:30 GMT 2001 Olly Betts

	* gui/glade/querygui.cc: Adding missing `#include <vector>'
	  which stops it compiling on freebsd.
