@@ -1,6 +1,10 @@
+Tue Oct 30 17:38:14 GMT 2001  Olly Betts <olly@survex.com>
+
+	* Fixed msearch to actually work.
+
 Wed Oct 24 11:31:13 BST 2001  Olly Betts <olly@survex.com>
 
-	* Added in "unique" flag (* prefix)
+	* Added in "unique" flag (* prefix).
 
 Tue Oct 23 14:57:02 2001  James Aylett  <tartarus@users.sourceforge.net>
 
